Lean/test/parse_error/submission.lean
import .defs

lamma my_proof : 1 + 1 = 2 := rfl
